<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />
    <item
        android:id="@+id/nav_predict"
        android:icon="@drawable/ic_predict"
        android:title="@string/Predict" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/About" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/History" />
    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/Language" />
    <item
        android:id="@+id/nav_legal"
        android:icon="@drawable/ic_legal"
        android:title="@string/legal_notices" />


</menu>
